# box_shooter

./: .gitignore  CMakeLists.txt  README.md
shaders/: shader.frag  shader.vert
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  box.h  box_shooter.cpp
